# Basic-Electric-Circuit-solver

./: Branch.cpp  Branch.h  CMakeLists.txt  Circuit.cpp  Circuit.h  CircuitException.cpp  CircuitException.h  Complex.cpp  Component.cpp  Component.h  Component.tpp  ComponentsFactory.cpp  Current.cpp  Current.h  CurrentSource.cpp  CurrentSource.h  ElectricalProperty.cpp  ElectricalProperty.h  ElectricatPropertyObserver.h  Node.cpp  Node.h  Operators.h  README.md  Resistance.cpp  Resistance.h  Voltage.cpp  Voltage.h  VoltageSource.cpp  VoltageSource.h  main.cpp  temp.cpp  temp.h  temporal.cpp  test.cpp
.github/workflows/: tg-notify-creation.yml  tg-notify.yml
concrete/: Branch.cpp  Branch.h  Circuit.cpp  Circuit.h  CircuitException.cpp  CircuitException.h  Component.cpp  Component.h  ComponentsFactory.cpp  ComponentsFactory.h  Current.cpp  Current.h  ElectricalProperty.cpp  ElectricalProperty.h  Node.cpp  Node.h  Resistance.cpp  Resistance.h  Voltage.cpp  Voltage.h  VoltageSource.cpp  VoltageSource.h
transpiler/: Helpers.cpp  Helpers.h  Parser.cpp  Parser.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  TranspilerException.cpp  TranspilerException.h
transpiler/ast-nodes/: ASTNode.cpp  ASTNode.h  AstNodeBase.cpp  AstNodeBase.h  BinaryExprNode.cpp  BinaryExprNode.h  BinaryExpression.cpp  BinaryExpression.h  CallExpression.cpp  CallExpression.h  CallExpressionNode.cpp  CallExpressionNode.h  Identifier.cpp  Identifier.h  IdentifierNode.cpp  IdentifierNode.h  NumericLiteral.cpp  NumericLiteral.h  StringLiteral.cpp  StringLiteral.h  VarDeclaration.cpp  VarDeclaration.h
(+8 files in other folders)
